experimental/ir/testdata/extend/wrong_kind.proto.stderr.txt
error: expected message type, found message extension `test.Foo.x`
  --> testdata/extend/wrong_kind.proto:8:12
   |
 8 |     extend x {
   |            ^ expected message type
 9 |         optional int32 x = 1;
   |                        - defined here

error: expected message type, found enum value `test.Foo.BAZ`
  --> testdata/extend/wrong_kind.proto:11:12
   |
 6 |     enum Bar { BAZ = 1; }
   |                --- defined here
...
10 |     }
11 |     extend BAZ {
   |            ^^^ expected message type

error: expected message type, found enum type `test.Foo.Bar`
  --> testdata/extend/wrong_kind.proto:14:12
   |
 6 |     enum Bar { BAZ = 1; }
   |          --- defined here
...
13 |     }
14 |     extend Bar {
   |            ^^^ expected message type

error: expected message type, found `package` declaration `test`
  --> testdata/extend/wrong_kind.proto:17:12
   |
 3 | package test;
   | ------------- defined here
...
16 |     }
17 |     extend test {
   |            ^^^^ expected message type

error: expected message type, found oneof definition `test.Foo.self`
  --> testdata/extend/wrong_kind.proto:25:12
   |
21 |     oneof self {
   |           ---- defined here
...
25 |     extend self {
   |            ^^^^ expected message type

error: expected message type, found scalar type `string`
  --> testdata/extend/wrong_kind.proto:29:12
   |
29 |     extend string {
   |            ^^^^^^ expected message type

encountered 6 errors
